--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "npm-run-all2": "^6.1.2",
     "typescript": "~5.4.0",
     "vite": "^5.1.6",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-tsc": "^2.0.6"
   }
 }
