--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.6.8",
     "element-plus": "^2.6.3",
+    "esdk-obs-browserjs": "^3.23.5",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
