--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/tsconfig": "^0.5.1",
     "npm-run-all2": "^6.1.2",
+    "sass": "^1.75.0",
     "typescript": "~5.4.0",
     "vite": "^5.1.6",
     "vite-plugin-vue-setup-extend": "^0.4.0",
